2 http://tech.colla.me/ja/show/a_todo_app_premitive_model&view

--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-<div>
+<div id="view">
     <h1>ToDo: <span class="jsCount">0</span></h1>
     <ul class="jsList">
         <li class="jsListEmpty">no item</li>
