--- a/app.html
+++ b/app.html
@@ -19,7 +19,7 @@
 
 
 <script type="js/tmpl" id="js-tmpl-item">
-    <li>{this}<button class="jsDelete">x</button></li>
+    <li>{name}<button class="jsDelete">x</button></li>
 </script>
 
 <script src="./app.js"></script>
