--- a/app.html
+++ b/app.html
@@ -4,23 +4,14 @@
     <title></title>
 </head>
 <body>
-<div id="view">
-</div>
-
-<script type="js/tmpl" id="js-tmpl-app">
 <div>
-    <h1>ToDO: <span class="jsCount">{count}</span></h1>
-    <ul class="jsList">
-        <li class="jsListEmpty">no item</li>
+    <h1>{'To' + 'DO'}: {todos.length}</h1>
+    <ul>
+        <li style="{display: todos.length > 0 ? 'none' : 'inherit'}">no item</li>
+        <li for="item in todos">{item.name}</li>
     </ul>
     <p><input type="text" class="jsInput"><button class="jsAdd">add</button></p>
 </div>
-</script>
-
-
-<script type="js/tmpl" id="js-tmpl-item">
-    <li>{name}<button class="jsDelete">x</button></li>
-</script>
 
 <script src="./app.js"></script>
 </body>
