6 http://tech.colla.me/show/a_todo_app_primitive_event_listener

--- a/app.html
+++ b/app.html
@@ -8,9 +8,9 @@
     <h1>{'To' + 'DO'}: {todos.length}</h1>
     <ul>
         <li style="{display: todos.length > 0 ? 'none' : 'inherit'}">no item</li>
-        <li for="item in todos">{item.name}</li>
+        <li for="item in todos">{item.name}<button click="remove(item)">x</button></li>
     </ul>
-    <p><input type="text" class="jsInput"><button class="jsAdd">add</button></p>
+    <p><input type="text" model="newItemName"><button click="add()">add</button></p>
 </div>
 
 <script src="./app.js"></script>
