--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title></title>
+	<script src="../lib/expressionParser.js"></script>
+	<script src="../lib/domParser.js"></script>
+	<script src="../lib/dijest.js"></script>
+	<script src="../lib/bindNode.js"></script>
+	<script src="../lib/index.js"></script>
+
 </head>
 <body>
 <div>
@@ -13,6 +19,6 @@
     <p><input type="text" model="newItemName"><button click="add()">add</button></p>
 </div>
 
-<script src="./app.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
