smallest dom update http://tech.colla.me/show/a_todo_app_premitive_diffing_for_loop

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+	<script src="../lib/diff.js"></script>
 	<script src="../lib/expressionParser.js"></script>
 	<script src="../lib/domParser.js"></script>
 	<script src="../lib/dijest.js"></script>
