--- a/demo/index.html
+++ b/demo/index.html
@@ -3,9 +3,11 @@
 <head>
     <title></title>
 	<script src="../lib/diff.js"></script>
-	<script src="../lib/expressionParser.js"></script>
-	<script src="../lib/domParser.js"></script>
-	<script src="../lib/dijest.js"></script>
+    <script src="../lib/scope.js"></script>
+    <script src="../lib/expressionParser.js"></script>
+    <script src="../lib/domParser.js"></script>
+    <script src="../lib/directive.js"></script>
+    <script src="../lib/dijest.js"></script>
 	<script src="../lib/bindNode.js"></script>
 	<script src="../lib/controller.js"></script>
 
@@ -15,7 +17,7 @@
     <h1>{'To' + 'DO'}: {todos.length}</h1>
     <ul>
         <li style="{display: todos.length > 0 ? 'none' : 'inherit'}">no item</li>
-        <todo-item for="item in todos"></todo-item>
+        <todo-item for="item in todos" todo="item"></todo-item>
     </ul>
     <p><add-todo todos="todos"></add-todo></p>
 </div>
