--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
         <li style="{display: todos.length > 0 ? 'none' : 'inherit'}">no item</li>
         <todo-item for="item in todos" todo="item"></todo-item>
     </ul>
-    <p><add-todo todos="todos"></add-todo></p>
+    <p><add-todo todos="todos" addItem="addItem"></add-todo></p>
 </div>
 
 <script src="./index.js"></script>
