rename to component

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,7 +6,7 @@
     <script src="../lib/scope.js"></script>
     <script src="../lib/expressionParser.js"></script>
     <script src="../lib/domParser.js"></script>
-    <script src="../lib/directive.js"></script>
+    <script src="../lib/component.js"></script>
     <script src="../lib/dijest.js"></script>
 	<script src="../lib/bindNode.js"></script>
 </head>
