--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
 	<script src="../lib/diff.js"></script>
-    <script src="../lib/scope.js"></script>
+    <script src="../lib/getterSetter.js"></script>
     <script src="../lib/expressionParser.js"></script>
     <script src="../lib/domParser.js"></script>
     <script src="../lib/component.js"></script>
