--- a/demo/index.html
+++ b/demo/index.html
@@ -7,7 +7,7 @@
     <script src="../lib/expressionParser.js"></script>
     <script src="../lib/domParser.js"></script>
     <script src="../lib/component.js"></script>
-    <script src="../lib/dijest.js"></script>
+    <script src="../lib/watcher.js"></script>
 	<script src="../lib/bindNode.js"></script>
 </head>
 <body>
