--- a/demo/index.html
+++ b/demo/index.html
@@ -2,13 +2,7 @@
 <html>
 <head>
     <title></title>
-	<script src="../lib/diff.js"></script>
-    <script src="../lib/getterSetter.js"></script>
-    <script src="../lib/expressionParser.js"></script>
-    <script src="../lib/domParser.js"></script>
-    <script src="../lib/component.js"></script>
-    <script src="../lib/watcher.js"></script>
-	<script src="../lib/bindNode.js"></script>
+	<script src="../dist/lsdom.js"></script>
 </head>
 <body>
 <div id="app"></div>
