brushup with todomvc css

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title></title>
+    <meta charset="utf8">
+    <link rel="stylesheet" href="http://todomvc.com/examples/react/node_modules/todomvc-app-css/index.css">
 	<script src="../dist/lsdom.js"></script>
 </head>
 <body>
